Build minimal React Chinese dictionary

--- a/starter/index.html
+++ b/starter/index.html
@@ -17,9 +17,9 @@
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		<link rel="manifest" href="/manifest.webmanifest" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="Vitamin" />
-		<meta name="theme-color" content="#BD34FE" />
-		<title>Vitamin</title>
+                <meta name="description" content="Chinese Dictionary" />
+                <meta name="theme-color" content="#BD34FE" />
+                <title>Chinese Dictionary</title>
 		<style>
 			@font-face {
 				font-family: Inter;
